--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app"></div>    
     <script src="https://fb.me/react-0.14.7.js"></script>
     <script src="https://fb.me/react-dom-0.14.7.js"></script>
-    <script type="text/javascript" src="script-compiled.js"></script>
+    <script src="script-compiled.js"></script>    
   </body>
 </html>
